<resources>
    <string name="app_name">cansaCare</string>
    <string name="first_on_boarding_page">You are not alone</string>

    <!--    description-->

    <string name="first_on_boarding_description">Cancer is not a battle for you to fight alone</string>
    <string name="second_on_boarding_description">Fight cancer with the support of a community</string>
    <string name="third_on_boarding_description">Share your story, support others, and thrive together</string>
    <string name="create_acc_and_sign_in_header">Share your Story</string>
    <string name="create_acc_and_sign_in_description">Community support, telemedicine, consultations, appointment scheduling,and medication all in one place</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_booking">Booking</string>
    <string name="title_profile">Profile</string>
    <string name="my_text">This is an <u>underline</u>.</string>

    <!--    Blog description-->

    <string name="blog_description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,or randomised words which dontlook even slightly believable. If you are going to use a passage of Lorem Ipsum,you need to be sure there isntanything embarrassing hidden in the middle of text. All the Lorem Ipsum generatorson the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
    </string>
    <string name="login">Login</string>

    <string name="previous_button">previous button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_user">Create User</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="get_started_body">Community support, telemedicine consultations, appointment scheduling, and medication reminders all in one place</string>
    <string name="get_started_heading">Share your story</string>
    <string name="on_boarding_images">Onboarding Images</string>
    <string name="or">or</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="you_have_a_family_history_of_cancer_showing_symptoms_of_a_cancer_or_has_genuine_concern_for_cancer_diagnosed_patients">You have a family history of cancer, showing symptoms of a cancer, or has genuine concern for cancer diagnosed patients</string>

    <string name="search">search</string>
    <string name="booking">Booking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_service_detail">ServiceDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="serviceName">Dr. Lawrence Agyei</string>
    <string name="serviceTitle">Dietician</string>

    <string name="thread">Threads</string>
    <string name="main_thread">#Main thread</string>
    <string name="curious_thread">Curious thread</string>
    <string name="cervical_cancer">Cervical cancer</string>
    <string name="breast_cancer">Breast Cancer</string>
    <string name="prostate_cancer">Prostate cancer</string>
    <string name="send_back_button">Send back button</string>
    <string name="patient_profile_picture">patient_profile_picture</string>
    <string name="patient_name_sample">Georges C DIEME</string>
    <string name="post_sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="time_sample">11:24pm</string>
    <string name="comments">comments</string>
    <string name="number_sample">23</string>
    <string name="add_new_post">add new post</string>
    <string name="share_with_the_community">Share with the community</string>
    <string name="edit_text_hint">Share freely your thoughts with the community and support your pairs</string>
    <string name="post_send">Share</string>

    <string name="thread_greetings">How are you doing today?</string>

    <string name="time">7:00</string>
    <string name="service_displayName">Dr Martin Agyei</string>
    <string name="service_role">Oncologist</string>
    <string name="specialty">Specialty:</string>
    <string name="service_type_one">Cervical Cancer</string>
    <string name="service_type_two">Pediatrics</string>
    <string name="video_appointment">Video appointment</string>
    <string name="in_house_appointment">In-house appointment</string>
    <string name="availabilityHeading">Availability</string>
    <string name="availabiltySubheading">Select appointment date and time</string>
    <string name="appointment_time">Choose your appointment time :</string>
    <string name="BookAppointmentBttn">Book an appointment</string>
    <string name="dr_name_sample">Dr Martin DIEME</string>
    <string name="dr_title_sample">Oncologist</string>
    <string name="date_choice">Please select a date</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="saturday">Saturday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="time_choice">Please select a time</string>
    <string name="first_time">8:00-9:00am</string>
    <string name="second_time">9:00-10:00am</string>
    <string name="third_time">10:00-11:00am</string>
    <string name="fourth_time">2:00-3:00pm</string>
    <string name="fifth_time">3:00-4:00pm</string>
    <string name="sixth_time">4:00-5:00pm</string>
    <string name="confirm_appointment">Appointment confirmation</string>
    <string name="time_title">Time :</string>
    <string name="date_title">Date :</string>
    <string name="date_sample">Monday 23, march 2023</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="upcoming">Upcoming</string>
    <string name="patient_name">Patient Name</string>
    <string name="type_of_cancer">Type of cancer</string>
    <string name="appointment_date">Monday</string>
    <string name="doctor_title">Oncologist</string>
    <string name="doctor_name">Doctor name</string>
    <string name="delete">delete</string>
    <string name="appointment_booked">Appointment booked</string>
    <string name="join_the_call">Join the call</string>
    <string name="appointment_details">Appointment details :</string>
    <string name="cancel_appointment">Cancel Appointment</string>


</resources>