<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/post_card_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:contentPadding="20sp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/patient_profile_picture"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/patient_profile_picture"
                android:src="@drawable/circle_ic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/patient_name_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/patient_name_sample"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/patient_profile_picture"
                app:layout_constraintLeft_toRightOf="@id/patient_profile_picture"
                app:layout_constraintTop_toTopOf="@id/patient_profile_picture" />

            <TextView
                android:id="@+id/post_time_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_sample"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/patient_name_thread"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/post_content_thread"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/post_sample_text"
                app:layout_constraintLeft_toLeftOf="@id/patient_name_thread"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/patient_name_thread" />

            <ImageView
                android:id="@+id/comment_icon_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/comments"
                android:src="@drawable/comment_ic"
                app:layout_constraintLeft_toLeftOf="@+id/post_content_thread"
                app:layout_constraintTop_toBottomOf="@+id/post_content_thread" />

            <TextView
                android:id="@+id/comments_count_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/number_sample"
                app:layout_constraintBottom_toBottomOf="@id/comment_icon_thread"
                app:layout_constraintLeft_toRightOf="@+id/comment_icon_thread"
                app:layout_constraintTop_toTopOf="@id/comment_icon_thread" />

            <ImageView
                android:id="@+id/like_button_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/like_ic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/comments_count_thread" />

            <TextView
                android:id="@+id/likes_count_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/number_sample"
                app:layout_constraintBottom_toBottomOf="@id/like_button_thread"
                app:layout_constraintLeft_toRightOf="@+id/like_button_thread"
                app:layout_constraintTop_toTopOf="@id/like_button_thread" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>