<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp">
 <TextView
     android:id="@+id/get_started_header"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/get_started_heading"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     android:layout_marginTop="100dp"
     android:textAlignment="center"
     android:textColor="@color/primary_text"
     android:textSize="35sp"
     android:textStyle="bold"
     />

 <TextView
     android:id="@+id/get_started_body"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/get_started_body"
     app:layout_constraintTop_toBottomOf="@id/get_started_header"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     android:textAlignment="center"
     android:layout_marginTop="@dimen/activity_margin_large"
     android:textColor="@color/primary_text"
     android:textSize="18sp"
     />


 <com.google.android.material.button.MaterialButton
     android:id="@+id/createAccountBtn"
     android:layout_width="300dp"
     android:layout_marginTop="@dimen/activity_margin_large"
     android:layout_height="wrap_content"
     app:layout_constraintTop_toBottomOf="@id/get_started_body"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     android:text="@string/create_account"
     android:backgroundTint="@color/primary_color"
     />


 <com.google.android.material.button.MaterialButton
     android:id="@+id/signInBtn"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/activity_input_margin"
     android:text="@string/sign_in"
     android:textColor="@color/primary_color"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/createAccountBtn"
     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
     app:strokeColor="@color/primary_color"
     app:strokeWidth="1dp"
     />



</androidx.constraintlayout.widget.ConstraintLayout>