<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/appointment_card_personal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/appointment_card_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:cardBackgroundColor="@color/primary_color"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/appointment_card_patient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/doctor_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/appointment_card_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appointment_type_of_cancer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/doctor_title"
                android:textColor="@color/secondary_color"
                app:layout_constraintLeft_toRightOf="@id/appointment_card_icon"
                app:layout_constraintTop_toBottomOf="@id/appointment_card_patient_name" />

            <TextView
                android:id="@+id/appointment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/appointment_date"
                android:textColor="@color/secondary_color"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/appointment_card_icon"
                app:layout_constraintTop_toBottomOf="@id/appointment_type_of_cancer" />

            <TextView
                android:id="@+id/appointment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/time_sample"
                android:textColor="@color/secondary_color"
                app:layout_constraintLeft_toRightOf="@id/appointment_date"
                app:layout_constraintTop_toBottomOf="@id/appointment_type_of_cancer" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                android:src="@drawable/delete_appointment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>